--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.flyway.baseline-on-migrate = true
+spring.flyway.baselineOnMigrate = true
+spring.flyway.locations=classpath:src/main/resources/db/migration
