--- a/flywayConfig.properties
+++ b/flywayConfig.properties
@@ -1,5 +1,5 @@
-flyway.user=postgres
+flyway.user=tsis_user
 flyway.password=password
 
-flyway.url=jdbc:postgresql://localhost:5432/postgres
+flyway.url=jdbc:postgresql://localhost:5432/tsis
 flyway.locations=db/migration
