--- a/flywayConfig.properties
+++ b/flywayConfig.properties
@@ -1,5 +1,5 @@
 flyway.user=tsis_user
 flyway.password=password
-
-flyway.url=jdbc:postgresql://localhost:5432/tsis
+flyway.schemas = shop
+flyway.url=jdbc:postgresql://localhost:5434/tsis
 flyway.locations=db/migration
