--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.flyway.baselineOnMigrate = true
-spring.flyway.locations=classpath:src/main/resources/db/migration
+spring.flyway.locations=db/migration
